--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueuse/core": "^5.1.3",
     "core-js": "^3.6.5",
+    "lodash-es": "^4.17.21",
     "vue": "^3.0.0",
     "vugel": "^1.0.19"
   },
